<resources>
    <string name="app_name" translatable="false">Thermopile</string>

    <string name="label_schedule">Schedule</string>
    <string name="label_settings">Settings</string>
    <string name="label_locale">Locale</string>
    <string name="label_units">Units</string>
    <string name="label_style">Style</string>
    <string name="label_network">Network</string>
    <string name="label_sensors">Sensors</string>

    <string name="action_charts">Charts</string>
    <string name="action_schedule" translatable="false">@string/label_schedule</string>
    <string name="action_settings" translatable="false">@string/label_settings</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <string name="_00" translatable="false">:00</string>
    <string name="am" translatable="false">AM</string>
    <string name="pm" translatable="false">PM</string>
    <string name="label_select_day">Select a day</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <string name="day_monday_short">Mon</string>
    <string name="day_tuesday_short">Tue</string>
    <string name="day_wednesday_short">Wed</string>
    <string name="day_thursday_short">Thu</string>
    <string name="day_friday_short">Fri</string>
    <string name="day_saturday_short">Sat</string>
    <string name="day_sunday_short">Sun</string>

    <string name="state_off">Off</string>
    <string name="state_on">On</string>

    <string name="label_empty"/>
    <string name="date_format">Date format</string>
    <string name="timezone">Timezone</string>
    <string name="time_format">Time format</string>

    <string-array name="weekdays">
        <item>@string/day_monday</item>
        <item>@string/day_tuesday</item>
        <item>@string/day_wednesday</item>
        <item>@string/day_thursday</item>
        <item>@string/day_friday</item>
        <item>@string/day_saturday</item>
        <item>@string/day_sunday</item>
    </string-array>

    <string-array name="weekdays_short">
        <item>@string/day_monday_short</item>
        <item>@string/day_tuesday_short</item>
        <item>@string/day_wednesday_short</item>
        <item>@string/day_thursday_short</item>
        <item>@string/day_friday_short</item>
        <item>@string/day_saturday_short</item>
        <item>@string/day_sunday_short</item>
    </string-array>

    <string-array name="chart_types">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Pressure</item>
        <item>Air quality</item>
        <item>Motion</item>
    </string-array>

    <string-array name="chart_intervals">
        <item>Today</item>
        <item>Yesterday</item>
        <item>This week</item>
        <item>Last week</item>
        <item>This month</item>
        <item>Last month</item>
        <item>This year</item>
        <item>Last year</item>
    </string-array>

</resources>
